move test script, add check for work_item_query, opted to not block SIGs during select()

--- a/service/event_manager.service
+++ b/service/event_manager.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Event Manager Event Queue Processor
 Documentation=https://bitbucket.org/neadwerx/event_manager/src/master/
-After=network.target syslog.target
+After=network.target
 
 [Service]
 Type=oneshot
